# controllers/system_user_controller.go
@@ -21,6 +21,7 @@ import (
 // @Param username query string false "用户名"
 // @Param phone query string false "手机号"
 // @Param status query int false "状态"
+// @Param deptId query string false "部门ID，查询该部门及子部门的用户"
 // @Success 200 {object} map[string]interface{} "获取成功"
 // @Failure 401 {object} map[string]interface{} "未授权"
 // @Router /system/users [get]
